can show opengl

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,8 +6,20 @@
             "command": "C:\\msys64\\ucrt64\\bin\\g++.exe",
             "args": [
                 "-fdiagnostics-color=always",
+                "-I",
+                "${workspaceFolder}\\include",
                 "-g",
                 "${workspaceFolder}/*.cpp",
+                "${workspaceFolder}\\lib\\GLFW\\**.a",
+                "${workspaceFolder}\\lib\\**.c",
+                "-L",
+                "${workspaceFolder}\\lib\\GLFW",
+                "-l",
+                "glfw3",
+                "-l",
+                "opengl32",
+                "-l",
+                "gdi32",
                 "-o",
                 "${fileDirname}\\build\\debug\\cgclient.exe"
             ],
