integrated v8 not done

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,9 +13,17 @@
                 "${workspaceFolder}\\lib\\GLFW\\**.a",
                 "${workspaceFolder}\\lib\\**.c",
                 "-L",
+                "${workspaceFolder}\\lib\\v8",
+                "-L",
                 "${workspaceFolder}\\lib\\GLFW",
                 "-l",
                 "glfw3",
+                "-l",
+                "v8",
+                "-l",
+                "v8_libbase",
+                "-l",
+                "v8_libplatform",
                 "-l",
                 "opengl32",
                 "-l",
