--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,6 +8,10 @@
                 "-fdiagnostics-color=always",
                 "-I",
                 "${workspaceFolder}\\include",
+                "-I",
+                "${workspaceFolder}\\v8",
+                "-I",
+                "${workspaceFolder}\\include\\v8",
                 "-g",
                 "${workspaceFolder}/*.cpp",
                 "${workspaceFolder}\\lib\\GLFW\\**.a",
