--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,13 +9,15 @@
                 "-I",
                 "${workspaceFolder}\\include",
                 "-I",
-                "${workspaceFolder}",
+                "${workspaceFolder}\\third_party",
                 "-I",
-                "${workspaceFolder}\\include\\v8",
+                "${workspaceFolder}",
                 "-g",
                 "${workspaceFolder}/*.cpp",
                 "${workspaceFolder}\\lib\\GLFW\\mingw-w64\\**.a",
                 "${workspaceFolder}\\lib\\**.c",
+                "${workspaceFolder}\\third_party\\tinygltf\\**.h",
+                "${workspaceFolder}\\third_party\\tinygltf\\**.hpp",
                 "-l",
                 "opengl32",
                 "-l",
