--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -431,6 +431,7 @@ include_directories (${PLATFORM_ROOT})
 include_directories (${CG_ROOT}/engine/thirdparty)
 include_directories (${CG_ROOT}/engine/thirdparty/sokol)
 include_directories (${CG_ROOT}/engine/thirdparty/lua)
+include_directories (${CG_ROOT}/engine/thirdparty/stb)
 include_directories (${CG_ROOT}/engine/core)
 include_directories (${CG_ROOT}/engine/core/action)
 include_directories (${CG_ROOT}/engine/core/buffer)
@@ -449,6 +450,7 @@ include_directories (${CG_ROOT}/engine/core/texture)
 include_directories (${CG_ROOT}/engine/core/util)
 include_directories (${CG_ROOT}/engine/renders)
 include_directories (${CG_ROOT}/engine/global)
+include_directories (${CG_ROOT}/engine/ui)
 
 add_subdirectory(${CG_ROOT}/engine)
 
