--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,11 +7,19 @@
             "args": [
                 "-fdiagnostics-color=always",
                 "-I",
+                "${workspaceFolder}\\engine",
+                "-I",
                 "${workspaceFolder}\\engine\\third_party\\include",
+                "-I",
+                "${workspaceFolder}\\engine\\third_party\\include\\v8",
                 "-I",
                 "${workspaceFolder}",
                 "-g",
-                "${workspaceFolder}/*.cpp",
+                "${workspaceFolder}/**.cpp",
+                "${workspaceFolder}/engine/loader/*.cpp",
+                "${workspaceFolder}/engine/render/*.cpp",
+                "${workspaceFolder}/engine/v8/*.cpp",
+                "${workspaceFolder}//*.cpp",
                 "${workspaceFolder}\\engine\\third_party\\lib\\GLFW\\mingw-w64\\**.a",
                 "${workspaceFolder}\\engine\\third_party\\lib\\v8\\win-x64\\debug\\v8.dll.lib",
                 "${workspaceFolder}\\engine\\third_party\\lib\\**.c",
