--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -19,7 +19,9 @@
                 "${workspaceFolder}/engine/loader/*.cpp",
                 "${workspaceFolder}/engine/render/*.cpp",
                 "${workspaceFolder}/engine/v8/*.cpp",
-                "${workspaceFolder}//*.cpp",
+                "${workspaceFolder}/*.cpp",
+                "${workspaceFolder}/engine/core/*.h",
+                "${workspaceFolder}/engine/*.h",
                 "${workspaceFolder}\\engine\\third_party\\lib\\GLFW\\mingw-w64\\**.a",
                 "${workspaceFolder}\\engine\\third_party\\lib\\v8\\win-x64\\debug\\v8.dll.lib",
                 "${workspaceFolder}\\engine\\third_party\\lib\\**.c",
